# zapretGUI

./: .gitignore  README.md
gui/: Cargo.toml  build.rs
gui/assets/: app.manifest  app.rc
gui/src/: app.rs  main.rs  theme.rs
gui/src/core/: bat_parser.rs  connectivity.rs  diagnostics.rs  lists.rs  mod.rs  paths.rs  service.rs  settings.rs  updates.rs  winws.rs
gui/src/ui/: mod.rs  page_diagnostics.rs  page_lists.rs  page_logs.rs  page_service.rs  page_settings.rs  page_strategies.rs  sidebar.rs  widgets.rs
